# nanyong-zhike-app

./: .dockerignore  .env.example  .gitattributes  .gitignore  Caddyfile  Dockerfile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  compose.cloudflare.yaml  compose.local.yaml  compose.yaml  progress.md  pyproject.toml  启动南雍知课.cmd
.github/workflows/: ci.yml  release.yml
backend/app/: academic.py  academic_snapshots.py  ai_tools.py  config.py  database.py  exchange_system.py  five_education.py  llm_gateway.py  main.py  memos.py  nju_cli.py  notices.py  portal_snapshots.py  reviews.py  version.py  (+4 more)
desktop/: launcher.py  nanyong_zhike.spec  patch_nju_cli.py  preflight_windows_installer.ps1  prepare_release.py  smoke_test_release.py  verify_nju_cli_patch.py  windows-installer.iss  使用说明.txt
docs/: deployment-cloudflare.md  index.html  planner.md
frontend/: index.html  package-lock.json  package.json  vite.preview.config.ts
scripts/: generate_preview_data.py  start-local.sh  update_reviews.py
tests/: test_academic.py  test_academic_snapshots.py  test_ai.py  test_config.py  test_container_build.py  test_desktop_launcher.py  test_desktop_quit.py  test_exchange_system.py  test_five_education.py  test_frontend_brand_assets.py  test_frontend_controls.py  test_memos.py  test_nju_cli.py  test_nju_cli_patch.py  test_notices.py  test_pages_gallery.py  test_portal_snapshots.py  test_ranking_guard.py  test_release_smoke_assets.py  test_reviews.py  test_schedule.py  test_second_classroom.py  test_security.py  test_student_profile.py  test_support_feature.py  test_version_sync.py
(+69 files in other folders)
